rename service lifecycle annotations